# 1284-sds-advml

./: .buildinfo  .gitignore  .gitmodules  .markdownlint.json  README.html  README.md  _config.yml  _toc.yml  build.py  build_exts.py  environment.yaml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle
.doctrees/contents/appendix/: notation.doctree
.doctrees/contents/sec1/: exercise-sudoku.doctree  figure-detection.doctree  matplotlib.doctree  numpy.doctree  opencv.doctree  pandas.doctree  scikit-learn.doctree  setup-python.doctree
.doctrees/contents/sec2/: data-visualization.doctree  deep-learning.doctree  exercise-ogura.doctree  feature-extraction.doctree
.doctrees/contents/sec3/: deep-reinforcement-learning.doctree  exercise-othello.doctree  othello-agent.doctree  q-learning.doctree  reinforcement-learning.doctree
.github/workflows/: build.yaml  conda.yaml  gh-pages.yaml  python.yaml
.jupyter_cache/: global.db
.jupyter_cache/executed/0ffa095bb1225c554474dd74d6b36003/: base.ipynb
.jupyter_cache/executed/241840d0abebeb4f04881fdc9ac5ec6b/: base.ipynb
.jupyter_cache/executed/2eb7556659b9f1a5867460a1053b787d/: base.ipynb
.jupyter_cache/executed/3c1740e5947c0b84d7f4e2e7eb8b974c/: base.ipynb
.jupyter_cache/executed/52903138cf6d7ff8904e0284ec9d8f0e/: base.ipynb
.jupyter_cache/executed/56b0359edc8935f1bf0ab2a94becb291/: base.ipynb
.jupyter_cache/executed/81c2715a3e0a8d7160ec639334e041e4/: base.ipynb
.jupyter_cache/executed/9e8580199d31580a8a74d439cc62a04f/: base.ipynb
.jupyter_cache/executed/b58d6951ff7c1f71d71f67a61523c62b/: base.ipynb
.jupyter_cache/executed/bc3b715c91234ee800ae8a8338206449/: base.ipynb
.jupyter_cache/executed/e56c2f70d8d6f32d869b8d02d6ce6f2f/: base.ipynb
Sec1/: 01-setup.md  02-numpy.md  02-pandas.md  03-matplotlib.md  03-opencv.md  05-mnist-recog.md
Sec1/codes/: mnist_pca.py
_assets/: custom.scss
_sources/: index.md
_sources/contents/appendix/: notation.ipynb
_sources/contents/sec1/: exercise-sudoku.ipynb  figure-detection.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  scikit-learn.ipynb  setup-python.ipynb
_sources/contents/sec2/: data-visualization.ipynb  deep-learning.ipynb  exercise-ogura.ipynb  feature-extraction.ipynb
_sources/contents/sec3/: deep-reinforcement-learning.ipynb  exercise-othello.ipynb  othello-agent.ipynb  q-learning.ipynb  reinforcement-learning.ipynb
_static/: custom.css  custom.js  documentation_options.js
advml/reversi/: gui.py  main.py  state.py
advml2/reversi/: state.py
contents/appendix/: check-python.ipynb  notation.html  notation.ipynb  references.md  submit-assignment.ipynb
contents/sec1/: .gitignore  01-setup.ipynb  03-matplotlib.ipynb  04-opencv.ipynb  05-figure-detection.md  05-scikit-learn.ipynb  05-sklearn.ipynb  06-dimensionality-reduction.ipynb  07-solve-sudoku.ipynb  08-figure-detection.ipynb  dimensionality-reduction.ipynb  exercise-sudoku.html  exercise-sudoku.ipynb  figure-detection.html  figure-detection.ipynb  matplotlib.html  matplotlib.ipynb  numpy.html  numpy.ipynb  opencv.html  opencv.ipynb  pandas.csv  pandas.html  pandas.ipynb  pandas.xlsx  scikit-learn.html  scikit-learn.ipynb  setup-python.html  setup-python.ipynb  solve-sudoku.ipynb
contents/sec1/.ipynb_checkpoints/: 02-numpy-checkpoint.ipynb
contents/sec1/codes/: mnist_pca.py
contents/sec2/: .gitignore  01-setup.md  boxing-characters.ipynb  cnn.ipynb  data-augmentation.ipynb  data-visualization.html  data-visualization.ipynb  deep-learning.html  deep-learning.ipynb  exercise-ocr.ipynb  exercise-ogura.html  exercise-ogura.ipynb  feature-extraction.html  feature-extraction.ipynb  mlp.ipynb  mnist-recog-dnn.ipynb  setup-colab.ipynb
contents/sec3/: 01-history.ipynb  02-reinforcement-learning.ipynb  03-min-max-search.ipynb  04-mc-tree-search.ipynb  05-reversi-agent.ipynb  deep-q-learning.ipynb  deep-reinforcement-learning.html  deep-reinforcement-learning.ipynb  exercise-othello.html  exercise-othello.ipynb  othello-agent.html  othello-agent.ipynb  othello-player.ipynb  q-learning.html  q-learning.ipynb  reinforcement-learning.html  reinforcement-learning.ipynb
contents/sec3/othello/: .gitignore  cutils.pyx  env.py  othello.py  setup.py
html/: README.html  genindex.html  search.html  searchindex.js
html/_sources/contents/sec1/: matplotlib.ipynb  numpy.ipynb  opencv.ipynb
html/_sources/contents/sec3/: deep-reinforcement-learning.ipynb
html/contents/appendix/: notation.html
html/contents/sec1/: figure-detection.html  matplotlib.html  numpy.html  pandas.html  scikit-learn.html  setup-python.html
html/contents/sec2/: data-visualization.html  feature-extraction.html
html/contents/sec3/: reinforcement-learning.html
jupyter_execute/contents/appendix/: notation.ipynb
jupyter_execute/contents/sec1/: exercise-sudoku.ipynb  figure-detection.ipynb  matplotlib.ipynb  numpy.ipynb  opencv.ipynb  pandas.ipynb  scikit-learn.ipynb  setup-python.ipynb
jupyter_execute/contents/sec2/: data-visualization.ipynb  deep-learning.ipynb  exercise-ogura.ipynb  feature-extraction.ipynb
jupyter_execute/contents/sec3/: deep-reinforcement-learning.ipynb  exercise-othello.ipynb  othello-agent.ipynb  q-learning.ipynb  reinforcement-learning.ipynb
modules/othello/: cothello.pyx  othello.py
