[build-system]
requires = ["setuptools", "cython", "numpy", "poetry_core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sdsadvml"
version = "0.1.0"
description = ""
authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = "README.md"
license = "CC BY-NC-SA 4.0"

packages = [{ include = "othello", from = "modules" }]
exclude = [
  "lib/*",
  "data/*",
  "contents/*",
  "autograding/*",
  "dist/*",
  "templates/*",
  "_static/*",
  "_build/*",
  ".github/*",
  ".pytest_cache/*",
  ".mypy_cache/*",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.0"
scipy = "^1.11.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
opencv-python = "^4.8.0.74"
networkx = "^3.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
nodejs = "^0.1.1"
scikit-image = "^0.21.0"
bokeh = "^3.2.2"
jupyterlab = "^4.0.0"
jupyter-bokeh = "^3.0.7"
jupyterlab-widgets = "^3.0.8"
ipywidgets = "^8.1.0"
pytest = "^7.4.0"
ffmpeg = "^1.4"
gymnasium = { extras = ["classic-control"], version = "^0.29.1" }
opencv-contrib-python = "^4.8.0.76"
torchviz = "^0.0.2"
advml = { path = "./lib/advml/", develop = false }

torch = [
  { markers = "sys_platform == 'win32'", version = "==2.0.0+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'linux'", version = "==2.0.0+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')", url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp39-none-macosx_11_0_arm64.whl" },
  { markers = "sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64'", url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp39-none-macosx_10_9_x86_64.whl" },
]

torchvision = [
  { markers = "sys_platform == 'win32'", version = "==0.15.0+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'linux'", version = "==0.15.0+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')", url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.0-cp39-cp39-macosx_11_0_arm64.whl" },
  { markers = "sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64'", url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.0-cp39-cp39-macosx_10_9_x86_64.whl" },
]
japanize-matplotlib = "^1.1.3"
colorama = "^0.4.6"
cython = "^3.0.5"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"
jupyter-book = "^0.15.1"
jupyterlab-code-formatter = "^2.2.1"
lxml = "^4.9.3"
docutils = "0.17.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.isort]
profile = "black"
length_sort = "True"
line_length = 99

[tool.mypy]
python_version = 3.9
follow_imports = "silent"
disallow_any_generics = "True"
strict_optional = "True"
check_untyped_defs = "True"
allow_redefinition = "True"

[tool.flake8]
max-line-length = 99
ignore = "Q000,E127,E203,E402,W503,W504"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 99

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
