[tool.poetry]
name = "sdsadvml"
version = "1.0.0"
description = "Advanced machine learning course in Hitotsubashi University"
authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = "README.md"
homepage = "https://tatsy.github.io/1284-sds-ml-advanced/"
repository = "https://github.com/tatsy/1284-sds-ml-advanced.git"
license = "CC BY-NC-SA 4.0"
package-mode = false

exclude = [
  "autograding/*",
  "contents/*",
  "data/*",
  "dist/*",
  "templates/*",
  "_build/*",
  "_static/*",
  ".github/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
]

[tool.poetry.dependencies]
python = "~=3.10.0"
numpy = "~1.26.0"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.12.2"
opencv-python = "^4.8.0.74"
opencv-contrib-python = "^4.8.0.76"
networkx = "^3.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
nodejs = "^0.1.1"
scikit-image = "^0.24.0"
bokeh = "^3.6.0"
jupyterlab = "^4.0.0"
jupyter-bokeh = "^3.0.7"
jupyterlab-widgets = "^3.0.8"
ipywidgets = "^8.1.0"
pytest = "^7.4.0"
ffmpeg = "^1.4"
gymnasium = { extras = ["classic-control"], version = "^0.29.1" }
japanize-matplotlib = "^1.1.3"
colorama = "^0.4.6"

torch = [
  { markers = "sys_platform == 'win32'", version = "==2.2.2+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'linux'", version = "==2.2.2+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'darwin'", version = "==2.2.2" },
]

torchvision = [
  { markers = "sys_platform == 'win32'", version = "==0.17.2+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'linux'", version = "==0.17.2+cpu", source = "pytorch-cpu" },
  { markers = "sys_platform == 'darwin'", version= "==0.17.2" },
]

advml = { path = "modules/advml", develop = true }
othello = { path = "modules/othello", develop = true }

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"
jupyter-book = "^0.15.1"
jupyterlab-code-formatter = "^2.2.1"
lxml = "^4.9.3"
docutils = "0.17.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true
line_length = 99

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.flake8]
max-line-length = 99
ignore = "Q000,E127,E203,E402,W503,W504"

[tool.black]
target-version = ["py310"]
line-length = 99

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
